--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="conduit_green">#5cb85c</color>
+    <color name="conduit_green_dark">#266126</color>
+    <color name="conduit_grey">#687077</color>
+    <color name="conduit_grey_dark">#4A535A</color>
 </resources>
