--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/nav_global_feed"
+        android:name="com.jsadhu.conduit.ui.feed.GlobalFeedFragment"
+        android:label="@string/menu_global_feed"
+        tools:layout="@layout/fragment_home" />
+
+    <fragment
         android:id="@+id/nav_gallery"
         android:name="com.jsadhu.conduit.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
