--- a/app/src/main/res/layout/fragment_global_feed.xml
+++ b/app/src/main/res/layout/fragment_global_feed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -8,11 +9,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-<!--    <Button-->
-<!--        android:id="@+id/btn_fetch"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:text="Get Articles"/>-->
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:elevation="2dp"
+        android:visibility="visible"
+        android:id="@+id/progress_bar"/>
 
 </FrameLayout>
